--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="display-4 text-center">All Users</h1>
+<h1 class="display-4 text-center">All Users data</h1>
 
 <table class="table table-hover">
   <thead>
