removed class from nav-item and add to the fa icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,8 @@
        <i class="fa fa-user-circle m" ></i>   
         <%= link_to "Dashboard", user_path(current_user) %>
       </li>
-        <li class="nav-item m">
-          <i class="fa fa-sign-out"></i>
+        <li class="nav-item ">
+          <i class="fa fa-sign-out m"></i>
         <%= link_to "Logout", '/logout' %>
       </li>
       <% end  %>
