added a new column in my database called admin, an admin can view all users and delete them, and also fixed some bugs in the project

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -16,7 +16,7 @@
 
 .profile-details {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .divider {
   border: 1px solid;
