--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,23 +8,33 @@
       <th scope="col">LastName</th>
       <th scope="col">Email</th>
       <th scope="col">Job Title</th>
+      <th scope="col">Admin Status</th>
     </tr>
   </thead>
   <tbody>
+  
   <% @users.each do |user| %>
+  <% if current_user != user %>
     <tr>
-       <td><%= user.firstname %></td>
+      <td><%= user.firstname %></td>
       <td><%= user.lastname %></td>
       <td><%= user.email %></td>
-       <td><%= user.job_title %></td>
-        <td><%= link_to 'Show', user_path(user), :class => "btn btn-light" %></td>
-        <td><%= link_to 'Delete user', user_path(user),
+      <td><%= user.job_title %></td>
+      <td><%= user.admin %></td>
+      <td><%= link_to 'Show', user_path(user), :class => "btn btn-light" %></td>
+      <% if user.admin == false %>
+      <td><%= link_to 'Make Admin', admin_path(user), :class => "btn btn-light"  %></td>
+      <% else %>
+      <td><%= link_to 'Remove Admin', admin_path(user), :class => "btn btn-light"  %></td>
+      <% end %>
+      <td><%= link_to 'Delete user', user_path(user),
                                       method: :delete,
                                       data: {confirm: "Are you sure?"},
                                       :class => "btn btn-outline-danger" %></td>
     
      
 </tr>
+<% end %>
 <% end %>
   </tbody>
 </table>
