--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,10 @@
         HTML 
         CSS 
         </p>
+        <% if current_user == @user %>
           <%= link_to 'Add Project', "#{current_user.id}/projects/new", :class => "btn btn-outline-info btn-sm" %>
             <%= link_to 'View Projects', "#{current_user.id}/projects", :class => "btn btn-outline-secondary btn-sm" %>
-        
+        <% end %>
         </div>
 
        <div>
@@ -49,10 +50,11 @@
         </div>
      
        </div>
-        
+        <% if current_user.admin == true %>
         <div class="">
             <%= link_to 'Back', users_path, :class => "btn btn-outline-info btn-sm" %>
             </div>
+            <% end %>
     </div>
 
 </div>
