--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,10 @@
        <i class="fa fa-users m" ></i>   
         <%= link_to "All Users", users_path %>
       </li>
+      <li class="nav-item">   
+       <i class="fa fa-folder m" ></i>   
+        <%= link_to "All Projects", '/projects' %>
+      </li>
          <% end %>
        <li class="nav-item">   
        <i class="fa fa-user-circle m" ></i>   
