--- a/app/views/projects/all_projects.html.erb
+++ b/app/views/projects/all_projects.html.erb
@@ -13,8 +13,11 @@
         <h5 class="card-title"><%= project.name %></h5>
         <hr>
         <p class="card-text"><%= project.details %></p>  
+       <div class="alld"> 
         <%= link_to 'Show',"projects/#{project.id}" , :class => "btn btn-light" %>
-        <button class="btn btn-light" disabled><%= User.find(project.user_id).firstname %> <%= User.find(project.user_id).lastname %></button>
+         <button class="btn btn-light btn-sm" disabled><%= project.created_at.strftime(" %B %d, %Y") %></button>
+        <button class="btn btn-light btn-sm" disabled><%= User.find(project.user_id).firstname %> <%= User.find(project.user_id).lastname %></button>
+       </div>
       </div>
       </div>
     <% end %>
