--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -18,7 +18,7 @@
      <div class="row mb-3">
         <div class="col-md-12 col-xs-12">
             <%= form.label :project_image %>
-            <%= form.file_field :image %>
+            <%= form.file_field :image, multiple: true %>
         </div>
     </div>  
     <div class="row mb-4">
