added pagination to projects and users controllers and added the links to the views

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -33,3 +33,8 @@
 .rmadmin {
   background-color: tomato;
 }
+.nav {
+  background-color: cornflowerblue;
+  width: 150px;
+  justify-content: space-around;
+}
