--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -37,3 +37,10 @@
   width: 150px;
   justify-content: space-around;
 }
+.pd {
+  display: flex;
+  justify-content: space-evenly;
+}
+.one {
+  height: 0;
+}
