--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -11,11 +11,13 @@
   <% if current_user.projects.length > 0 %>
     <% current_user.projects.each do |project| %>
   
-     <div class="card m-2 c" style="width: 18rem;">
+     <div class="card border-success m-2 c" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title"><%= project.name %></h5>
         <hr>
         <p class="card-text"><%= project.details %></p>  
+         <%= link_to '+Thread', new_user_project_topic_path(project_id: project.id) , :class => "btn btn-primary btn-sm" %>
+           <%= link_to 'View Thread',user_project_topics_path(project_id: project.id) , :class => "btn btn-secondary btn-sm" %>
         <%= link_to 'Show',"projects/#{project.id}" , :class => "btn btn-light" %>
         <%= link_to 'Edit',"projects/#{project.id}/edit", :class => "btn btn-warning" %> 
         <%= link_to 'X', "projects/#{project.id}", 
