--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,4 @@
+<div class="pd">
 <div class="project">
 <div class="img"> 
   <% @project.image.each do |image| %>
@@ -6,10 +7,7 @@
               <%= link_to "Open File", image, :class => "btn btn-sm btn-light", "target" => "_blank" %>
           <% else %>
               <%= image_tag image %>
-                <%= link_to 'Remove image', delete_image_attachment_user_project_path(image),
-                          method: :delete,
-                          data: {confirm: "Are you sure?"} ,
-                          :class =>"btn btn-light"%>         
+              <%# <%= button_tag 'Remove image', image.purge %>    
           <% end %>   
   <% end %>
 </div>
@@ -19,7 +17,29 @@
   <div class="card-body">
     <h5 class="card-title"><%= @project.name %></h5>
     <p class="card-text"><%= @project.details %></p>
+    <p class="text-muted">Created <%= time_ago_in_words(@project.created_at) %> ago</p>
   </div>
 </div>
 <%= link_to 'Back', "/users/#{current_user.id}/projects",  :class => 'btn btn-outline-info btn-sm bt' %>
+</div>
+<div class="card one" style="width: 18rem;">
+  <div class="card-header">
+    Users
+  </div>
+  <% @users.each do |user| %>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item "><button type="button" class="btn btn-light btn-sm btu"><%= user.firstname %> <%= user.lastname %> - Add</button></li>
+  </ul>
+  <% end %>
+</div>
+
+<div class="card one" style="width: 18rem;">
+  <div class="card-header">
+    Users
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"></li>
+  </ul>
+
+</div>
 </div>
