did add comment and delete comment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,3 +35,10 @@ nav {
 .m {
   color: cornflowerblue;
 }
+li{
+  list-style-type: none;
+  margin: 15px;
+}
+ul{
+  justify-content: space-between;
+}
