--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,1 +1,16 @@
-<h1>Hello</h1>
+<% if @message.errors.any? %>
+    <% @message.errors.full_messages.each do |msg| %>
+    <div class="alert alert-danger" role="alert">
+        <%= msg %>
+    </div>
+    <% end %>
+<% end %>
+<div class="card w-75">
+        <div class="card-body msg">
+           <h5 class="card-title">Edit Message</h5>
+        <%= form_with scope: :message, url: user_project_topic_message_path, method: :patch  do |form| %>          
+           <%= form.text_area :content, :cols => 70, :rows =>5, :placeholder => "Add Message..." %>
+           <%= form.submit "Add Message", :class => "btn btn-light btn-sm" %>
+           <% end %>
+        </div>
+</div>
