--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,6 +1,6 @@
 <h2 class="display-4  text-center mb-3">Edit Thread <i class="fa fa-forumbee m" ></i></h2>
 
-<%= form_for(:topic, url:  edit_user_project_topic_path(@topic)) do |form| %>
+<%= form_with scope: :topic, url: user_project_topic_path, method: :patch do |form| %>
 
 <div class="container" style="border:1px solid #cecece;">
     <div class="row mt-4 mb-3" >
@@ -12,7 +12,7 @@
     
     <div class="row mb-4">
         <div class="col-md-12 col-xs-12">
-            <%= form.submit("+Add thread",{:class => "btn btn-outline-primary btn-block"}) %>
+            <%= form.submit("Update thread",{:class => "btn btn-outline-primary btn-block"}) %>
           
         </div>
     </div>    
