fixed accessibility, added buttons that made navigation much easier

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -25,3 +25,4 @@
 <% end %>
 </div>
 
+<%= link_to 'Back', "/users/#{current_user.id}/projects",  :class => 'btn btn-outline-info btn-sm  fa fa-arrow-left' %>
