--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -19,3 +19,4 @@
 </div>
 <% end %>
 
+   <%= link_to 'Back', "/users/#{current_user.id}/projects/#{params[:project_id]}/topics",  :class => 'btn btn-outline-info btn-sm  fa fa-arrow-left' %>
