--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,7 +10,9 @@
     <h2 class="display-4 text-center">Thread-<%= @topic.name %></h2>  
   </div>
 </div>
-    <div class="msb">  <%= link_to 'Message', new_user_project_topic_message_path(topic_id: @topic.id) , :class => "btn btn-primary btn-sm fa fa-plus" %></div>
+    <div class="msb">  <%= link_to 'Message', new_user_project_topic_message_path(topic_id: @topic.id) , :class => "btn btn-primary btn-sm fa fa-plus" %> 
+    <%= link_to 'Back', "/users/#{current_user.id}/projects/#{params[:project_id]}/topics",  :class => 'btn btn-outline-info btn-sm  fa fa-arrow-left' %>
+    </div>
     <div id="container">
       <ul id="comments">
       <% if @topic.messages.length > 0 %>	
