--- a/app/assets/stylesheets/project_users.scss
+++ b/app/assets/stylesheets/project_users.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the ProjectUsers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.access{
+    display: flex;
+    justify-content: space-evenly;
+}
