--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -39,7 +39,7 @@
            
         <% end %>
         <% else %>
-        <h1 class="display-4 text-center">No comments yet!</h1>
+        <h1 class="display-4 text-center">No messages yet!</h1>
         <% end %>
       
     </div>
