--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,16 +16,18 @@
         <h5 class="card-title"><%= project.name %></h5>
         <hr>
         <p class="card-text"><%= project.details %></p>  
-         <%= link_to '+Thread', new_user_project_topic_path(project_id: project.id) , :class => "btn btn-light btn-sm" %>
-          <%= link_to 'View Thread',user_project_topics_path(project_id: project.id) , :class => "btn btn-light btn-sm" %>
-          <%= link_to ' User', new_user_project_project_user_path(project_id: project.id) , :class => "btn btn-light btn-sm fa fa-user-plus" %>
-           <%= link_to 'View User', user_project_project_users_path(project_id: project.id) , :class => "btn btn-light btn-sm fa fa-users" %>
-        <%= link_to 'Show',"projects/#{project.id}" , :class => "btn btn-light" %>
-        <%= link_to 'Edit',"projects/#{project.id}/edit", :class => "btn btn-light" %> 
-        <%= link_to 'X', "projects/#{project.id}", 
+        <%= link_to ' T', new_user_project_topic_path(project_id: project.id) , :class => "btn btn-light btn-sm fa fa-plus" %>
+        <%= link_to '',user_project_topics_path(project_id: project.id) , :class => "btn btn-light btn-sm fa fa-stack-exchange" %>
+        <%= link_to '', new_user_project_project_user_path(project_id: project.id) , :class => "btn btn-light btn-sm fa fa-user-plus" %>
+        <%= link_to '', user_project_project_users_path(project_id: project.id) , :class => "btn btn-light btn-sm fa fa-users" %>
+        <%= link_to ' Task', new_user_project_task_path(project_id: project.id) , :class => "btn btn-light btn-sm fa fa-plus " %>
+         <%= link_to '', user_project_tasks_path(project_id: project.id) , :class => "btn btn-light btn-sm fa fa-tasks" %>
+        <%= link_to '',"projects/#{project.id}" , :class => "btn btn-light fa fa-eye" %>
+        <%= link_to '',"projects/#{project.id}/edit", :class => "btn btn-light fa fa-pencil" %> 
+        <%= link_to '', "projects/#{project.id}", 
                                        method: :delete,
                                       data: {confirm: "Are you sure?"}, 
-                                      :class => "btn btn-danger" %> 
+                                      :class => "btn btn-danger fa fa-trash" %> 
       </div>
       </div>
     <% end %>
