--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
-  <h3 class=""> Projects</h3>
+  <h3 class="">My Projects</h3>
     <% if current_user %>
 <% flash.each do |type,msg| %>
-    <div class="alert alert-success">
+    <div class="alert alert-success alert-dismissible fade show">
         <%= msg %>
     </div>
 <% end %>
@@ -11,7 +11,7 @@
   <% if current_user.projects.length > 0 %>
     <% current_user.projects.each do |project| %>
   
-     <div class="card border-dark m-2 c" style="width: 22rem;">
+     <div class="card border-dark m-2 c" >
       <div class="card-body">
         <h5 class="card-title"><%= project.name %></h5>
         <hr>
