--- a/app/views/users/shared_projects.html.erb
+++ b/app/views/users/shared_projects.html.erb
@@ -38,4 +38,4 @@
       </div>
     <% end %>
   </div>
-  
+ <%= link_to '', user_path(current_user), :class => "btn btn-outline-info fa fa-arrow-left" %>
