--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,7 +53,7 @@
        </div>
         <% if current_user.admin == true %>
         <div class="">
-            <%= link_to 'Back', users_path, :class => "btn btn-outline-info btn-sm" %>
+            <%= link_to '', users_path, :class => "btn btn-outline-info fa fa-arrow-left" %>
             </div>
             <% end %>
     </div>
