--- a/app/views/users/shared_projects.html.erb
+++ b/app/views/users/shared_projects.html.erb
@@ -18,13 +18,13 @@
         <p class="card-text"><%= Project.find(project.project_id).details %></p>  
         <% if project.read == true  %>
             <%= link_to '',user_projects_path(project.user_id) + "/#{project.project_id}/topics" , :class => "btn btn-light  fa fa-stack-exchange" %>      
-            <%= link_to '',user_projects_path(project.user_id) + "/#{project.project_id}" , :class => "btn btn-light fa fa-eye" %>
+ 
         <% end %> 
         <% if project.update_access == true %>
-        <%= link_to '',"projects/#{project.id}/edit", :class => "btn btn-light fa fa-pencil" %> 
+        <%= link_to '', "users/#{project.user_id}/projects/#{project.project_id}/user_edit", :class => "btn btn-light fa fa-pencil" %> 
         <% end %>
         <% if project.del == true %>
-        <%= link_to '', "projects/#{project.id}", 
+        <%= link_to '', "projects/#{project.project_id}", 
                                        method: :delete,
                                       data: {confirm: "Are you sure?"}, 
                                       :class => "btn btn-danger fa fa-trash" %> 
